# fi-macro-lab

./: README.md  app.py  pyproject.toml  requirements.txt  run_demo.py  run_real_demo.py  run_taa_demo.py
.claude/: launch.json
aim_toolkit/: __init__.py  allocation.py  bvar.py  dashboard.py  data.py  data_global.py  data_live.py  fx.py  macro.py  managers.py  monitoring.py  nowcast.py  regimes.py  statespace.py  stress.py  taa.py  yield_curve.py
outputs/: strategist_dashboard.html
research/: extensions.py  run_extensions.py  synth.py
research_artifacts/window/extensions/: decay_profile.csv  downgrade_decomp.csv  downgrade_info.csv  liquidity_double_sort.csv  regime_conditional.csv  regime_series.csv  turnover.json
tests/: test_advanced.py  test_data_global.py  test_internals.py  test_research.py  test_statespace.py  test_validation.py
