[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aim-toolkit"
version = "0.2.0"
description = "Insurance investment-strategist toolkit: yield curves, regimes, ALM stress, FX, TAA validation, manager oversight, allocation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "requests>=2.28",
]

[project.optional-dependencies]
app = ["streamlit>=1.30", "plotly>=5.18"]
test = ["pytest>=7.0", "statsmodels>=0.14"]

[tool.setuptools.packages.find]
include = ["aim_toolkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
